[project]
name = "dlboost"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Chunxu Guo", email = "chunxu@wustl.edu" }
]
dependencies = [
    "torch>=2.3.0",
    "scipy>=1.13.0",
    "numpy>=1.26.4",
    "einops>=0.8.0",
    "monai>=1.3.0",
    "lightning>=2.2.3",
    "torchopt>=0.7.3",
    "wandb>=0.16.6",
    "xarray[complete]>=2024.3.0",
    "plum-dispatch>=2.3.5",
    "icecream>=2.1.3",
    "jaxtyping>=0.2.28",
    "beartype>=0.18.5",
    "scikit-learn>=1.4.2",
    "rich>=13.7.1",
    "einx>=0.2.2",
    "dask[distributed]>=2024.4.2",
    "torch-dct>=0.1.6",
    "imageio>=2.34.1",
]
readme = "README.md"
requires-python = ">= 3.11"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/dlboost"]
